[package]
name = "compressed-sparse-fiber"
version = "0.0.5"
authors = ["Steven Spencer <steven.spencer@iki.fi>"]
edition = "2018"
license = "Apache-2.0"
description = "Compressed sparse fiber implementation for Rust"
repository = "https://github.com/solidm/compressed-sparse-fiber"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sequence_trie = { version = "0.3.6", features = ["btreemap"] }

[dev-dependencies]
rand = {verion="0.8.5"}
